2012-08-14 Armin K. <krejzi@email.com>
   * Renamed cyrus-sasl bootscript to saslauthd
   * Renamed openldap bootscript to slapd
   * Renamed kerberos bootscript to krb5
   * Renamed dhcp bootscript to dhcpd and made it configurable
     through /etc/sysconfig/dhcpd
   * Updated dhclient network service to be compatible with latest
     instructions for ISC DHCP.

2012-06-02 Armin K. <krejzi@email.com>
   * Added BlueZ bootscript

2012-06-17 DJ Lucas <dj@linuxfromscratch.org>
   * Fix sshd return value when stopping without running.

2012-05-09 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Add atd script.
   * Make service scripts compatible with older versions of 
     init-functions.

2012-05-06 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Update exim script to be compatible with LFS 7.0+.

2012-05-02 Ken Moffat <ken@linuxfromscratch.org>
   * Use /usr/libexec in postfix script to match the book.

2012-05-01 Armin K. <krejzi@email.com>
   * Rewrote gdm script to be compatible with LFS 7.0+.

2012-04-27 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Update autofs script to be compatible with LFS

2012-04-20 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Correct start path in swat
   * Update proftpd for LFS 7.0+

2012-04-18 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Add cifs to netfs stop function.
   * Remove obsolete kernel version tests in nfs-server.

2012-04-09 Bruce Dubbs <bdubbs@linuxfromscratch.org>
   * Update network service scripts for consistency with LFS.

2012-04-07 Armin K. <krejzi@email.com>
   * Added NetworkManager bootscript.

   * Fixed avahi script startup order. Thanks to Wayne
     for reporting the issue.

2012-04-06 Armin K. <krejzi@email.com>
   * Rewrote cyrus-sasl script to be compatible with LFS 7.0+.
     This was done earlier, but no changelog entry was added.

   * Rewrote openldap script to be compatible with LFS 7.0+.

   * Rewrote kerberos script to be compatible with LFS 7.0+.
