@@ -47,6 +47,9 @@
       <para>August 25th, 2012</para>
       <itemizedlist>
         <listitem>
+          <para>[bdubbs] - Restore xinetd and upgrade to version 2.3.15.</para>
+        </listitem>
+        <listitem>
           <para>[krejzi] - Moved AccountsService into
           GNOME section.</para>
         </listitem>
