@@ -6,9 +6,9 @@
 
   <!ENTITY xinetd-download-http "http://www.xinetd.org/xinetd-&xinetd-version;.tar.gz">
   <!ENTITY xinetd-download-ftp  "&gentoo-ftp-repo;/xinetd-&xinetd-version;.tar.gz">
-  <!ENTITY xinetd-md5sum        "567382d7972613090215c6c54f9b82d9">
-  <!ENTITY xinetd-size          "301 KB">
-  <!ENTITY xinetd-buildsize     "4.4 MB">
+  <!ENTITY xinetd-md5sum        "77358478fd58efa6366accae99b8b04c">
+  <!ENTITY xinetd-size          "308 KB">
+  <!ENTITY xinetd-buildsize     "5.0 MB">
   <!ENTITY xinetd-time          "less than 0.1 SBU">
 ]>
 
@@ -56,9 +56,11 @@
 
     <bridgehead renderas="sect3">xinetd Dependencies</bridgehead>
 
+    <bridgehead renderas="sect4">Required</bridgehead>
+    <para role="required"><xref linkend="libtirpc"/></para>
+
     <bridgehead renderas="sect4">Optional</bridgehead>
-    <para role="optional"><xref linkend="tcpwrappers"/> and
-    <xref linkend="avahi"/></para>
+    <para role="optional"><ulink url="ftp://ftp.porcupine.org/pub/security/">tcpwrappers (deprecated)</ulink></para>
 
     <para condition="html" role="usernotes">User Notes:
     <ulink url="&blfs-wiki;/xinetd"/></para>
@@ -71,7 +73,9 @@
     <para>Install <application>xinetd</application> by running the following
     commands:</para>
 
-<screen><userinput>./configure --prefix=/usr --with-loadavg &amp;&amp;
+<screen><userinput>sed -i -e "/^LIBS/s/-lpset/&amp; -ltirpc/" xinetd/Makefile.in       &amp;&amp;
+sed -i -e "/register unsigned count/s/register//" xinetd/itox.c &amp;&amp;
+./configure --prefix=/usr --with-loadavg                        &amp;&amp;
 make</userinput></screen>
 
     <para>This package does not come with a test suite.</para>
@@ -79,6 +83,17 @@ make</userinput></screen>
     <para>Now, as the <systemitem class="username">root</systemitem> user:</para>
 
 <screen role="root"><userinput>make install</userinput></screen>
+
+  </sect2>
+
+  <sect2 role="commands">
+     <title>Command Explanations</title>
+
+     <para><command>sed ... xinetd/Makefile.in</command>: Ensure the program
+     links against the libtirpc library.</para>
+
+     <para><command>sed ... xinetd/itox.c</command>: Fix some compiler 
+     warnings.</para>
 
   </sect2>
 
@@ -106,7 +121,7 @@ make</userinput></screen>
 
       <para>Ensure the path to all daemons is
       <filename class="directory">/usr/sbin</filename>, rather than the default
-      path of <filename class="directory">/usr/etc</filename>, and install the
+      path of <filename class="directory">/usr/bin</filename>, and install the
       <application>xinetd</application> configuration files by running the
       following commands as the <systemitem class="username">root</systemitem>
       user:</para>
@@ -114,7 +129,6 @@ make</userinput></screen>
 <screen role="root"><userinput>cat &gt; /etc/xinetd.conf &lt;&lt; "EOF"
 <literal># Begin /etc/xinetd
 # Configuration file for xinetd
-#
 
 defaults
 {
@@ -126,8 +140,9 @@ defaults
 }
 
 # All service files are stored in the /etc/xinetd.d directory
-#
+
 includedir /etc/xinetd.d
+
 # End /etc/xinetd</literal>
 EOF</userinput></screen>
 
@@ -136,9 +151,9 @@ EOF</userinput></screen>
       to "disable = no".</para>
 
       <note>
-        <para>The following files are listed to demonstrate classic
+        <para>The following files are listed to demonstrate several
         <application>xinetd</application> applications. In many cases, these
-        applications are not needed. In some cases, the applications are
+        applications are not needed. Some classic applications are
         considered security risks. For example, <command>telnet</command>,
         <command>rlogin</command>, <command>rexec</command>, and
         <command>rsh</command> transmit unencrypted usernames and passwords
@@ -147,173 +162,7 @@ EOF</userinput></screen>
       </note>
 
 <screen role="root"><?dbfo keep-together="auto"?><userinput>install -v -d -m755 /etc/xinetd.d &amp;&amp;
-cat &gt; /etc/xinetd.d/login &lt;&lt; "EOF" &amp;&amp;
-<literal># Begin /etc/xinetd.d/login
 
-service login
-{
-   disable        = yes
-   socket_type    = stream
-   protocol       = tcp
-   wait           = no
-   user           = root
-   server         = /usr/sbin/in.rlogind
-   log_type       = SYSLOG local4 info
-}
-
-# End /etc/xinetd.d/login</literal>
-EOF
-cat &gt; /etc/xinetd.d/shell &lt;&lt; "EOF" &amp;&amp;
-<literal># Begin /etc/xinetd.d/shell
-
-service shell
-{
-   disable        = yes
-   socket_type    = stream
-   wait           = no
-   user           = root
-   instances      = UNLIMITED
-   flags          = IDONLY
-   log_on_success += USERID
-   server         = /usr/sbin/in.rshd
-}
-
-# End /etc/xinetd.d/shell</literal>
-EOF
-cat &gt; /etc/xinetd.d/exec &lt;&lt; "EOF" &amp;&amp;
-<literal># Begin /etc/xinetd.d/exec
-
-service exec
-{
-   disable        = yes
-   socket_type    = stream
-   wait           = no
-   user           = root
-   server         = /usr/sbin/in.rexecd
-}
-
-# End /etc/xinetd.d/exec</literal>
-EOF
-cat &gt; /etc/xinetd.d/comsat &lt;&lt; "EOF" &amp;&amp;
-<literal># Begin /etc/xinetd.d/comsat
-
-service comsat
-{
-   disable        = yes
-   socket_type    = dgram
-   wait           = yes
-   user           = nobody
-   group          = tty
-   server         = /usr/sbin/in.comsat
-}
-
-# End /etc/xinetd.d/comsat</literal>
-EOF
-cat &gt; /etc/xinetd.d/talk &lt;&lt; "EOF" &amp;&amp;
-<literal># Begin /etc/xinetd.d/talk
-
-service talk
-{
-   disable        = yes
-   socket_type    = dgram
-   wait           = yes
-   user           = root
-   server         = /usr/sbin/in.talkd
-}
-
-# End /etc/xinetd.d/talk</literal>
-EOF
-cat &gt; /etc/xinetd.d/ntalk &lt;&lt; "EOF" &amp;&amp;
-<literal># Begin /etc/xinetd.d/ntalk
-
-service ntalk
-{
-   disable        = yes
-   socket_type    = dgram
-   wait           = yes
-   user           = root
-   server         = /usr/sbin/in.ntalkd
-}
-
-# End /etc/xinetd.d/ntalk</literal>
-EOF
-cat &gt; /etc/xinetd.d/telnet &lt;&lt; "EOF" &amp;&amp;
-<literal># Begin /etc/xinetd.d/telnet
-
-service telnet
-{
-   disable        = yes
-   socket_type    = stream
-   wait           = no
-   user           = root
-   server         = /usr/sbin/in.telnetd
-   bind           = 127.0.0.1
-   log_on_failure += USERID
-}
-
-service telnet
-{
-   disable        = yes
-   socket_type    = stream
-   wait           = no
-   user           = root
-#  server         = /usr/sbin/in.telnetd
-   bind           = 192.231.139.175
-   redirect       = 128.138.202.20 23
-   log_on_failure += USERID
-}
-
-# End /etc/xinetd.d/telnet</literal>
-EOF
-cat &gt; /etc/xinetd.d/ftp &lt;&lt; "EOF" &amp;&amp;
-<literal># Begin /etc/xinetd.d/ftp
-
-service ftp
-{
-   disable        = yes
-   socket_type    = stream
-   wait           = no
-   user           = root
-   server         = /usr/sbin/in.ftpd
-   server_args    = -l
-   instances      = 4
-   log_on_success += DURATION USERID
-   log_on_failure += USERID
-   access_times   = 2:00-8:59 12:00-23:59
-   nice           = 10
-}
-
-# End /etc/xinetd.d/ftp</literal>
-EOF
-cat &gt; /etc/xinetd.d/tftp &lt;&lt; "EOF" &amp;&amp;
-<literal># Begin /etc/xinetd.d/tftp
-
-service tftp
-{
-   disable        = yes
-   socket_type    = dgram
-   wait           = yes
-   user           = root
-   server         = /usr/sbin/in.tftpd
-   server_args    = -s /tftpboot
-}
-
-# End /etc/xinetd.d/tftp</literal>
-EOF
-cat &gt; /etc/xinetd.d/finger &lt;&lt; "EOF" &amp;&amp;
-<literal># Begin /etc/xinetd.d/finger
-
-service finger
-{
-   disable        = yes
-   socket_type    = stream
-   wait           = no
-   user           = nobody
-   server         = /usr/sbin/in.fingerd
-}
-
-# End /etc/xinetd.d/finger</literal>
-EOF
 cat &gt; /etc/xinetd.d/systat &lt;&lt; "EOF" &amp;&amp;
 <literal># Begin /etc/xinetd.d/systat
 
@@ -331,23 +180,7 @@ service systat
 
 # End /etc/xinetd.d/systat</literal>
 EOF
-cat &gt; /etc/xinetd.d/netstat &lt;&lt; "EOF" &amp;&amp;
-<literal># Begin /etc/xinetd.d/netstat
 
-service netstat
-{
-   disable           = yes
-   socket_type       = stream
-   wait              = no
-   user              = nobody
-   server            = /usr/ucb/netstat
-   server_args       = -f inet
-   only_from         = 128.138.209.0
-   log_on_success    = HOST
-}
-
-# End /etc/xinetd.d/netstat</literal>
-EOF
 cat &gt; /etc/xinetd.d/echo &lt;&lt; "EOF" &amp;&amp;
 <literal># Begin /etc/xinetd.d/echo
 
@@ -375,6 +208,7 @@ service echo
 
 # End /etc/xinetd.d/echo</literal>
 EOF
+
 cat &gt; /etc/xinetd.d/chargen &lt;&lt; "EOF" &amp;&amp;
 <literal># Begin /etc/xinetd.d/chargen
 
@@ -402,6 +236,7 @@ service chargen
 
 # End /etc/xinetd.d/chargen</literal>
 EOF
+
 cat &gt; /etc/xinetd.d/daytime &lt;&lt; "EOF" &amp;&amp;
 <literal># Begin /etc/xinetd.d/daytime
 
@@ -429,6 +264,7 @@ service daytime
 
 # End /etc/xinetd.d/daytime</literal>
 EOF
+
 cat &gt; /etc/xinetd.d/time &lt;&lt; "EOF" &amp;&amp;
 <literal># Begin /etc/xinetd.d/time
 
@@ -443,7 +279,6 @@ service time
    wait           = no
 }
 
-
 service time
 {
    disable        = yes
@@ -456,110 +291,6 @@ service time
 }
 
 # End /etc/xinetd.d/time</literal>
-EOF
-cat &gt; /etc/xinetd.d/rstatd &lt;&lt; "EOF" &amp;&amp;
-<literal># Begin /etc/xinetd.d/rstatd
-
-service rstatd
-{
-   disable     = yes
-   type        = RPC
-   flags       = INTERCEPT
-   rpc_version = 2-4
-   socket_type = dgram
-   protocol    = udp
-   server      = /usr/sbin/rpc.rstatd
-   wait        = yes
-   user        = root
-}
-
-# End /etc/xinetd.d/rstatd</literal>
-EOF
-cat &gt; /etc/xinetd.d/rquotad &lt;&lt; "EOF" &amp;&amp;
-<literal># Begin /etc/xinetd.d/rquotad
-
-service rquotad
-{
-   disable     = yes
-   type        = RPC
-   rpc_version = 1
-   socket_type = dgram
-   protocol    = udp
-   wait        = yes
-   user        = root
-   server      = /usr/sbin/rpc.rstatd
-}
-
-# End /etc/xinetd.d/rquotad</literal>
-EOF
-cat &gt; /etc/xinetd.d/rusersd &lt;&lt; "EOF" &amp;&amp;
-<literal># Begin /etc/xinetd.d/rusersd
-
-service rusersd
-{
-   disable     = yes
-   type        = RPC
-   rpc_version = 1-2
-   socket_type = dgram
-   protocol    = udp
-   wait        = yes
-   user        = root
-   server      = /usr/sbin/rpc.rusersd
-}
-
-# End /etc/xinetd.d/rusersd</literal>
-EOF
-cat &gt; /etc/xinetd.d/sprayd &lt;&lt; "EOF" &amp;&amp;
-<literal># Begin /etc/xinetd.d/sprayd
-
-service sprayd
-{
-   disable      = yes
-   type         = RPC
-   rpc_version  = 1
-   socket_type  = dgram
-   protocol     = udp
-   wait         = yes
-   user         = root
-   server       = /usr/sbin/rpc.sprayd
-}
-
-# End /etc/xinetd.d/sprayd</literal>
-EOF
-cat &gt; /etc/xinetd.d/walld &lt;&lt; "EOF" &amp;&amp;
-<literal># Begin /etc/xinetd.d/walld
-
-service walld
-{
-   disable      = yes
-   type         = RPC
-   rpc_version  = 1
-   socket_type  = dgram
-   protocol     = udp
-   wait         = yes
-   user         = nobody
-   group        = tty
-   server       = /usr/sbin/rpc.rwalld
-}
-
-# End /etc/xinetd.d/walld</literal>
-EOF
-cat &gt; /etc/xinetd.d/irc &lt;&lt; "EOF"
-<literal># Begin /etc/xinetd.d/irc
-
-service irc
-{
-   disable      = yes
-   socket_type  = stream
-   wait         = no
-   user         = root
-   flags        = SENSOR
-   type         = INTERNAL
-   bind         = 192.168.1.30
-   deny_time    = 60
-}
-
-# End /etc/xinetd.d/irc</literal>
 EOF</userinput></screen>
 
       <indexterm zone="xinetd xinetd-config">
@@ -674,10 +405,11 @@ EOF</userinput></screen>
 
 <screen role="root"><userinput>/etc/rc.d/init.d/xinetd start</userinput></screen>
 
-      <para>Checking the <filename>/var/log/daemon.log</filename> file
-      should prove quite entertaining. This file may contain entries
-      similar to the following:</para>
+      <para>Check the <filename>/var/log/daemon.log</filename> to ensure the
+      appropriate services are started. If no services are enabled, the program
+      will not start without the <option>-stayalive</option> option.</para>
 
+<!--
 <screen><literal>Aug 22 21:40:21 dps10 xinetd[2696]: Server /usr/sbin/in.rlogind is not
 executable [line=29]
 Aug 22 21:40:21 dps10 xinetd[2696]: Error parsing attribute server -
@@ -688,7 +420,7 @@ executable [line=42]</literal></screen>
       <para>These errors are because most of the servers
       <command>xinetd</command> is trying to control are not
       installed yet.</para>
-
+-->
     </sect3>
 
   </sect2>
