@@ -1,3 +1,6 @@
+2012-08-25 Bruce Dubbs <bdubbs@linuxfromscratch.org>
+   * Restore xinetd script
+
 2012-08-14 Armin K. <krejzi@email.com>
    * Renamed cyrus-sasl bootscript to saslauthd
    * Renamed openldap bootscript to slapd
